--- a/config/app_deploy.yml
+++ b/config/app_deploy.yml
@@ -23,4 +23,4 @@ spec:
           - name:  SPRING_DATASOURCE_PASSWORD
             value: Password
           - name: SPRING_DATASOURCE_URL
-            value: jdbc:postgresql://10.111.116.122:5432/card_database
+            value: jdbc:postgresql://10.111.116.122:5432/postgres
