--- a/config/db_deploy.yml
+++ b/config/db_deploy.yml
@@ -23,4 +23,4 @@ spec:
           - name: POSTGRES_PASSWORD
             value: Password
           - name: POSTGRES_DB
-            value: card_database
+            value: postgres
